welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:4: error: not found: value <=
    case (a,b,c,equalOk) if equalOk == true && <= b && b<= c => true
                                               ^inOrderEqual:4: error: not found: value &&
    case (a,b,c,equalOk) if equalOk == true && <= b && b<= c => true
                                                    ^inOrderEqual:4: error: not found: value <=
    case (a,b,c,equalOk) if equalOk == true && <= b && b<= c => true
                                                        ^